# maplab

./: .gitmodules  README.md  pose_transform
algorithms/loopclosure/loop-closure-handler/src/: loop-detector-node.cc
algorithms/map-optimization/src/: vi-map-relaxation.cc
applications/maplab-node/src/: maplab-node.cc  ros-helpers.cc  synchronizer.cc
applications/maplab-server-node/: package.xml
applications/maplab-server-node/cfg/: maplab_server_ros_params.yaml
applications/maplab-server-node/cfg/hercules/: maplab_server_ros_params.yaml
applications/maplab-server-node/include/maplab-server-node/: maplab-server-node.h
applications/maplab-server-node/launch/GrAco/: GrAco-maplab-node.launch  GrAco-maplab-server-base-station.launch  GrAco-maplab-server-robots.launch  GrAco_tmuxp_launch.yaml
applications/maplab-server-node/launch/euroc/: euroc-maplab-server-robots.launch  euroc_tmuxp_launch.yaml  euroc_vis_map.yaml  graco-2robots.launch  hercules-maplab-server-base-station.launch  hercules-maplab-server-robots.launch  individual_rovioli.launch  run_rovioli.sh  (+3 more)
applications/maplab-server-node/src/: maplab-server-node.cc
applications/rovioli/scripts/: run_drone1.sh  run_hercules
applications/rovioli/share/: drone1_config.yaml  drone1_imu.yaml  imu-adis16488-2.yaml
deploy/: Dockerfile  compile.sh  enter_container.sh  run_container.sh
docker/: build_container.sh  dockerfile  enter_container.sh  run.sh  run_container.sh
maplab_loop_closure_exporter/: CMakeLists.txt  package.xml
maplab_loop_closure_exporter/src/: loop-closure-exporter-plugin.cc
(+44 files in other folders)
